force-app/main/default/objects/User_Baseline__c/User_Baseline__c.object-meta.xml
<CustomObject>
    <label>User Baseline</label>
    <nameField>
        <displayFormat>BSL-{0000000}</displayFormat>
        <label>Baseline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Baselines</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>