force-app/main/default/objects/User_Baseline__c/fields/App_Set__c.field-meta.xml
<CustomField>
    <fullName>App_Set__c</fullName>
    <label>App Set</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>