force-app/main/default/objects/User_Baseline__c/fields/Browser_Set__c.field-meta.xml
<CustomField>
    <fullName>Browser_Set__c</fullName>
    <label>Browser Set</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>