force-app/main/default/objects/User_Baseline__c/fields/Country_Set__c.field-meta.xml
<CustomField>
    <fullName>Country_Set__c</fullName>
    <label>Country Set</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>