force-app/main/default/objects/User_Baseline__c/fields/Hour_Histogram__c.field-meta.xml
<CustomField>
    <fullName>Hour_Histogram__c</fullName>
    <label>Hour Histogram</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>