force-app/main/default/objects/User_Baseline__c/fields/Ip24_Set__c.field-meta.xml
<CustomField>
    <fullName>Ip24_Set__c</fullName>
    <label>Ip24 Set</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>