force-app/main/default/objects/User_Baseline__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <label>Last Refreshed</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>