force-app/main/default/objects/User_Baseline__c/fields/Sample_Size__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sample Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>