force-app/main/default/objects/User_Baseline__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Baselines</relationshipLabel>
    <relationshipName>User_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>