force-app/main/default/objects/User_Baseline__c/fields/User_Id_External__c.field-meta.xml
<CustomField>
    <fullName>User_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>User Id External</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>